fix flip-display on firefox

--- a/src/components/RouteSummary/RouteSummary.scss
+++ b/src/components/RouteSummary/RouteSummary.scss
@@ -21,6 +21,7 @@ route-summary {
     }
     &__departure-time {
         font-size: 1.2em;
+        line-height: 1em;
     }
     &__planned-time {
         grid-column: 1 / 1;
